Second phase red pen edits to end of chapter 2.

--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -16,7 +16,7 @@ Amongst others, thanks go to;
 	
 	\item The PhotoSoc committee and the Ents Crew for providing a life outwith the office.
 	
-	\item Tala Budziszewski for London-based respite.
+	\item Tala Budziszewski for daring to proof read and for London-based respite.
 	
 	\item Ellen Shaw and Fiona Woodhall for caring so much.
 	
