--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -95,7 +95,7 @@ The concept of virtual reality and the associated HMDs that provide wide field o
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=0.4\textwidth]{rheingold-virtual-reality.jpg}
-		\caption{Howard Rheingold's 1992 bestseller \textit{Virtual Reality}~\cite{Rheingold1992}.}
+		\caption{Howard Rheingold's 1992 bestseller \textit{Virtual Reality}.}
 		\label{rheingold-virtual-reality.jpg}
 	\end{center}
 \end{figure}
